# dataseek

./: .gitignore  .pre-commit-config.yaml  LICENSE  PEDIGREE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: mission_config.yaml  prompts.yaml  seek_config.yaml
docs/: SEEK_CONFIG_GUIDE.md  dataseek.md  seek_tools.md
docs/components/: dataseek.md  mission_runner.md  search_graph.md  tool_manager.md  tui.md
docs/guides/: configuration-guide.md  data-seek-agent.md  plugin_tutorial.md  prompting-guide.md  tools-guide.md
docs/tutorials/: default_research.proposal.md  default_research_implementation.recipe.md  from-idea-to-dataset.tutorial.md  plugin.tutorial.md
examples/claimify/: mission_config.yaml  prompts.yaml
examples/mac_ai_research_assistant/: mission_config.yaml  prompts.yaml
plugins/: arxiv_search.py  file_saver.py  requirements.txt  url_to_markdown.py  wikipedia_search.py
samples/: primary_data_collection_natural_sciences_20250922103312.md
scripts/: check_prompts.py  dup.awk  local_ci_runner.py
seek/: __init__.py  config.py  graph.py  litesearch.py  main.py  mission_runner.py  models.py  nodes.py  patch.py  seek_utils.py  state.py  tools.py  utils.py
seek/common/: config.py  defensive_model_adapter.py  seek_utils.py  utils.py
seek/components/: patch.py
seek/components/mission_runner/: mission_runner.py  state.py
seek/components/mission_runner/tests/: test_mission_runner.py  test_mission_state_manager.py
seek/components/search_graph/: graph.py  litesearch.py  nodes.py
seek/components/search_graph/nodes/: __init__.py  archive.py  fitness.py  research.py  supervisor.py  synthetic.py  utils.py
seek/components/search_graph/tests/: test_archive_writes.py  test_characteristic_context.py  test_nodes.py  test_provenance_verification.py
seek/components/tool_manager/: clients.py  file_tools.py  plugin_base.py  registry.py  search_tools.py  tool_manager.py  tools.py  utils.py  web_tools.py
seek/components/tool_manager/tests/: test_arxiv_wikipedia_content_tools.py  test_arxiv_wikipedia_tools.py  test_plugin_system.py  test_real_plugins_loading.py  test_registry_fallback.py  test_tool_integration.py  test_tool_truncation.py  test_tools.py
seek/components/tui/: agent_handler.py  agent_output_parser.py  agent_process_manager.py  dataseek_tui.py  state.py  theme_manager.py  utils.py
seek/components/tui/components/: conversation_panel.py  error_modal.py  mission_panel.py  mission_selector.py  progress_panel.py  stats_header.py
seek/tui/: agent_output_parser.py  agent_process_manager.py  dataseek_tui.py  styles.tcss
seek/tui/components/: conversation_panel.py  error_modal.py  mission_panel.py  mission_selector.py  progress_panel.py  stats_header.py
tests/: conftest.py
tests/seek/: test_arxiv_wikipedia_content_tools.py  test_arxiv_wikipedia_tools.py  test_crawler_improvements.py  test_integration.py  test_mission_runner.py  test_nodes.py  test_react_config.py  test_recursion_limit_config.py  test_search_vs_content.py  test_seek.py  test_supervisor_duplicate_issue.py  test_tool_integration.py  test_tool_truncation.py  test_tools.py
tests/seek/common/: test_defensive_model_adapter.py
