[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataseek"
version = "0.1.1"
description = "DataSeek: A standalone data prospecting agent for finding reliable, verifiable data sources"
authors = [
    { name = "Robert Collins", email = "roberto.tomas.cuentas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "langchain-community",
    "langchain-litellm",
    "langchain-tavily",
    "langchain-google-community",
    "langsmith",
    "litellm",
    "requests",
    "html5lib",
    "httpx",
    "attachments",
    "beautifulsoup4",
    "google-api-python-client",
    "google-search-results",
    "arxiv",
    "wikipedia",
    "json-repair",
    # TUI dependencies
    "textual>=0.48.0",
    "typer>=0.9.0",
    "darkdetect>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black>=24.0.0",
    "ruff>=0.13.1",
    "mypy>=1.10.0",
    "bandit>=1.7.5",
    "pre-commit>=3.7.0",
    "types-PyYAML",
    "types-requests",
    "types-beautifulsoup4",
]
# Optional dependency for the crawler tool, requires playwright is installed on the system
crawler = ["libcrawler"]

[project.scripts]
dataseek = "seek.main:main"
dataseek-tui = "seek.components.tui.dataseek_tui:main"

[tool.setuptools]
# Auto-discover all seek* packages so moved components are included
packages = { find = { where = ["."], include = ["seek*"] } }

[tool.setuptools.package-data]
"seek" = ["../config/*.yaml", "../settings/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 100
[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
]
exclude = [".venv", "build", "dist"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "ARG002",  # Unused arguments in tests (fixtures, mocks)
    "F841",    # Assigned but unused (side-effect tests)
    "SIM117",  # try/finally often clearer in tests
    "B018",    # Useless expression (docstrings in tests)
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_site_packages = false
files = ["seek"]

[[tool.mypy.overrides]]
# Skip mypy checks for all test modules, including component-local tests under seek/**/tests
module = [
  "seek.*.tests.*",
]
ignore_errors = true

[tool.bandit]
skips = ["B101", "B608"]
exclude_dirs = [".venv", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
# Discover both root tests and component-local tests
testpaths = [
  "tests",
  "seek/components",
]
pythonpath = ["."]
